--- a/cgi/Makefile.in
+++ b/cgi/Makefile.in
@@ -37,17 +37,17 @@ ENABLE_DEBUG=@ENABLE_DEBUG@
 
 # Compiler flags for use with Valgrind - set when debug is enabled
 ifeq ('$(ENABLE_DEBUG)', 'yes')
-        CFLAGS=-O0 -g -Wall -DHAVE_CONFIG_H -DNSCGI
+        CFLAGS+=-O0 -g -DHAVE_CONFIG_H -DNSCGI
 endif
 
 # for profiling
 #CFLAGS += -pg -ftest-coverage
 
 # Compiler flags for optimization (overrides default)
-#CFLAGS=-O3 -Wall -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wstrict-prototypes -Wmissing-prototypes -Wnested-externs -DHAVE_CONFIG_H -DNSCGI
+#CFLAGS=-O3 -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wstrict-prototypes -Wmissing-prototypes -Wnested-externs -DHAVE_CONFIG_H -DNSCGI
 
 # Compiler flags for optimization (complements default)
-#CFLAGS_WARN=-Wall -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wstrict-prototypes -Wmissing-prototypes -Wnested-externs
+#CFLAGS_WARN= -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wstrict-prototypes -Wmissing-prototypes -Wnested-externs
 #CFLAGS_DEBUG=-ggdb3 -g3
 #CFLAGS+=$(CFLAGS_WARN) $(CFLAGS_DEBUG)
 
