--- a/daemon-init.in
+++ b/daemon-init.in
@@ -57,12 +57,6 @@ if [ ! -f $IcingaCfgFile ]; then
 	exit 1
 fi
 
-# Check that lockdir exists.
-if [ ! -d $IcingaLockDir ]; then
-	echo "Lockfile dir $IcingaLockDir not found.  Exiting."
-	exit 1
-fi
-
 ## helper functions ##
 
 # check status if icinga daemon
@@ -194,7 +188,7 @@ start(){
 		$IcingaBin -d $IcingaCfgFile
 		bin_exit=$?
 	fi
-	touch $IcingaLockDir/$IcingaLockFile
+	if [ -d $IcingaLockDir ]; then touch $IcingaLockDir/$IcingaLockFile; fi
 	echo "Starting icinga done."
 	exit $bin_exit
 }
