Improve the behaviour of the Solaris package during installs and uninstalls - #9020
   Several items:

1) Do not delete the "icinga" user, nor his data, on uninstall.
2) DO not delete teh "icinga" group on uninstall.
3) Split smf scripts/services for Icinga and Ido2db.
4) Back up the configuration tree before uninstall.
5) If the "icinga" user exists on install, use it to set file ownership
  once the install completes.  Ditto the group.

fixes #9020

--- a/Makefile.in
+++ b/Makefile.in
@@ -617,19 +617,22 @@ Prototype:
 	cd sample-config; \
 	for file in *.cfg; \
 	do \
-	    ../$(INSTALL) -m 644 $$file $(PACKDIR)/$(CFGDIR)/$$file.$(VERSION); \
+	    $(INSTALL) -m 644 $$file $(PACKDIR)/$(CFGDIR)/$$file.$(VERSION); \
 	done
 	chmod 640 $(PACKDIR)/$(CFGDIR)/resource.cfg.$(VERSION)
 	cd sample-config/template-object; \
 	for file in *.cfg; \
 	do \
-	    ../../$(INSTALL) -m 644 $$file $(PACKDIR)/$(CFGDIR)/objects/$$file.$(VERSION); \
+	    $(INSTALL) -m 644 $$file $(PACKDIR)/$(CFGDIR)/objects/$$file.$(VERSION); \
 	done
 	mkdir -p $(PACKDIR)/lib/svc/method/
 	$(INSTALL) -o root -g bin -m 555 daemon-init $(PACKDIR)/lib/svc/method/icinga
+	$(INSTALL) -o root -g bin -m 555 rc.ido2db $(PACKDIR)/lib/svc/method/ido2db
 	mkdir -p $(PACKDIR)/var/svc/manifest/application/
 	sed 's%!CFGPREFIX!%$(CFGDIR)%g' solaris/icinga.xml.tpl > solaris/icinga.xml
 	$(INSTALL) -m 444 -o root -g root solaris/icinga.xml $(PACKDIR)/var/svc/manifest/application/
+	sed 's%!CFGPREFIX!%$(CFGDIR)%g' solaris/ido2db.xml.tpl > solaris/ido2db.xml
+	$(INSTALL) -m 444 -o root -g root solaris/ido2db.xml $(PACKDIR)/var/svc/manifest/application/
 	#cd contrib; $(MAKE) all; $(MAKE) DESTDIR=$(PACKDIR) INIT_OPTS='' INSTALL_OPTS='' COMMAND_OPTS='' icinga_grp='' icinga_usr='' install
 	echo i pkginfo > solaris/Prototype
 	if [ -f solaris/checkinstall.in ] ; then cat solaris/checkinstall.in | sed 's/!SUN_PLATFORM!/$(SUN_PLATFORM)/g' > solaris/checkinstall; fi
