--- a/sample-config/cgi.cfg.in
+++ b/sample-config/cgi.cfg.in
@@ -622,7 +622,7 @@ sort_status_data_by_default=0
 # If you want to log information from cgi's (e.g. all submitted commands)
 # then set this option to 1, default is 0 (off).
 # WARNING:
-# This log is highly experimental and changes may occure without notice. Use at your own risk!!
+# This log is highly experimental and changes may occur without notice. Use at your own risk!!
 
 use_logging=@ENABLECGILOG@
 
